--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <link rel="normalize" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
 
-  
+
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
    <link rel="stylesheet" href="main.css">
 
     <meta charset="utf-8">
@@ -32,16 +35,7 @@
 <br><br>
     <div class="row-white">
       <p> talks about project</p>
-      <div class="container">
-  <div class="row">
-    <div class="col">
-      1 of 2
-    </div>
-    <div class="col">
-      2 of 2
-    </div>
-  </div>
-    </div>
+     
 
 
    <div class="row-rose">
