--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     </div>
 
     <div class="row-rose">
-      <h2>A lilttle bit about me: </h2>
+      <h2>About me: </h2>
       <div class="text">
-       <p>Hello, my name is Ana Vargas. I am 24 year old student. I am currently an undergrad full-time Biology student who is also a Software Development student at Year up in hopes to become a Bioengineer one day. I am focusing on HTML, CSS, Javascript, Ruby on rails, Java, and Python.
-       I am a team player, I typically like to spend my weekends playing softball and polishing off my codes. Some of my hobbies include traveling and experiencing different cultures collaborating with others and resolving conflicts on github. A great example of this would be the time I volunteered as a medical volunteer in Nepal for over a month. During this time, I got to know my patients as well as to collab with the local staff.  </p> 
+       <p>Hello, my name is Ana Vargas. I am 24 year old Biology student who is also a Software Development student at Year up in hopes to become a Bioengineer one day. I have experience with Java, and Python. While at Year Up I have learned the value of teamwork and relationship building while working in a corporate setting.
+       I am a team player, I typically like to spend my weekends playing softball, snowboarding and polishing off my codes. Some of my hobbies include traveling and experiencing different cultures collaborating with others and resolving conflicts on github. A great example of this would be the time I volunteered in Nepal for over a month. During this time, I got to know the local staff as well as to collab with them on tasks.  
+       My goal for this year is to network and shadow professionals in the tech industry.</p> 
       </div>
     </div>
     
@@ -43,7 +44,7 @@
     <div class="row-white">
     <center>
      <h3> Contact Me</h3>
-     <p>I am looking to volunteer in the tech field. </p>
+     <p>I am looking to volunteer/shadow. </p>
      <form method="POST" action="https://formspree.io/a.vargas2155@gmail.com"> <br>
      <input type="email" name="email" placeholder="Your email"> <br>
      <textarea name="message" placeholder="Type your message here"></textarea> <br>
